--- a/package.json
+++ b/package.json
@@ -50,7 +50,6 @@
     "webpack-hot-middleware": "^2.24.0"
   },
   "dependencies": {
-    "animejs": "^2.2.0",
     "axios": "^0.18.0",
     "express": "^4.16.3",
     "gravatar": "^1.6.0",
@@ -59,6 +58,8 @@
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "react-router-dom": "^4.3.1",
-    "validator": "^10.8.0"
+    "react-spring": "^5.9.2",
+    "validator": "^10.8.0",
+    "webfontloader": "^1.6.28"
   }
 }
