--- a/package.json
+++ b/package.json
@@ -57,8 +57,10 @@
     "prop-types": "^15.6.2",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
+    "react-reveal": "^1.2.2",
     "react-router-dom": "^4.3.1",
     "react-spring": "^5.9.2",
+    "react-text-transition": "^0.1.6",
     "validator": "^10.8.0",
     "webfontloader": "^1.6.28"
   }
