--- a/package.json
+++ b/package.json
@@ -6,9 +6,10 @@
   "scripts": {
     "start": "webpack --progress --profile --colors && nodemon ./src/index.js",
     "build": "webpack-dev-server --open --mode production",
+    "prod": "NODE_ENV=production node src/index.js",
+    "clean": "rm -rf dist/*",
     "lint": "eslint ./",
-    "lint-fix": "eslint --fix ./",
-    "watch-client": "webpack-dev-server --inline --hot"
+    "lint-fix": "eslint --fix ./"
   },
   "repository": {
     "type": "git",
