--- a/package.json
+++ b/package.json
@@ -26,7 +26,6 @@
     "babel-plugin-styled-components": "^1.9.2",
     "body-parser": "^1.18.3",
     "css-loader": "^1.0.1",
-    "dotenv": "^6.2.0",
     "eslint": "^5.9.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-config-standard": "^12.0.0",
@@ -63,6 +62,7 @@
     "react-spring": "^6.1.10",
     "react-text-transition": "^0.1.6",
     "validator": "^10.9.0",
-    "webfontloader": "^1.6.28"
+    "webfontloader": "^1.6.28",
+    "dotenv": "^6.2.0",
   }
 }
