--- a/package.json
+++ b/package.json
@@ -43,7 +43,6 @@
     "nodemon": "^1.18.7",
     "style-loader": "^0.23.1",
     "styled-components": "^4.1.2",
-    "webpack": "^4.27.1",
     "webpack-cli": "^3.1.1",
     "webpack-dev-middleware": "^3.3.0",
     "webpack-dev-server": "^3.1.10",
@@ -63,6 +62,7 @@
     "react-text-transition": "^0.1.6",
     "validator": "^10.9.0",
     "webfontloader": "^1.6.28",
-    "dotenv": "^6.2.0"
+    "dotenv": "^6.2.0",
+    "webpack": "^4.27.1"
   }
 }
