--- a/package.json
+++ b/package.json
@@ -43,10 +43,7 @@
     "nodemon": "^1.18.7",
     "style-loader": "^0.23.1",
     "styled-components": "^4.1.2",
-    "webpack-cli": "^3.1.1",
-    "webpack-dev-middleware": "^3.3.0",
-    "webpack-dev-server": "^3.1.10",
-    "webpack-hot-middleware": "^2.24.3"
+    "webpack-cli": "^3.1.1"
   },
   "dependencies": {
     "axios": "^0.18.0",
@@ -63,6 +60,9 @@
     "validator": "^10.9.0",
     "webfontloader": "^1.6.28",
     "dotenv": "^6.2.0",
-    "webpack": "^4.27.1"
+    "webpack": "^4.27.1",
+    "webpack-dev-middleware": "^3.3.0",
+    "webpack-dev-server": "^3.1.10",
+    "webpack-hot-middleware": "^2.24.3"
   }
 }
