--- a/package.json
+++ b/package.json
@@ -25,7 +25,6 @@
     "babel-loader": "^8.0.2",
     "babel-plugin-styled-components": "^1.9.2",
     "body-parser": "^1.18.3",
-    "css-loader": "^1.0.1",
     "eslint": "^5.9.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-config-standard": "^12.0.0",
@@ -36,13 +35,8 @@
     "eslint-plugin-promise": "^4.0.1",
     "eslint-plugin-react": "^7.11.1",
     "eslint-plugin-standard": "^4.0.0",
-    "file-loader": "^2.0.0",
-    "html-loader": "^0.5.5",
-    "html-webpack-plugin": "^3.2.0",
     "lodash": "^4.17.11",
     "nodemon": "^1.18.7",
-    "style-loader": "^0.23.1",
-    "styled-components": "^4.1.2",
     "webpack-cli": "^3.1.1"
   },
   "dependencies": {
@@ -63,6 +57,12 @@
     "webpack": "^4.27.1",
     "webpack-dev-middleware": "^3.3.0",
     "webpack-dev-server": "^3.1.10",
-    "webpack-hot-middleware": "^2.24.3"
+    "webpack-hot-middleware": "^2.24.3",
+    "html-webpack-plugin": "^3.2.0",
+    "file-loader": "^2.0.0",
+    "html-loader": "^0.5.5",
+    "style-loader": "^0.23.1",
+    "styled-components": "^4.1.2",
+    "css-loader": "^1.0.1"
   }
 }
