--- a/package.json
+++ b/package.json
@@ -40,7 +40,12 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "css-loader": "^1.0.1",
+    "dotenv": "^6.2.0",
     "express": "^4.16.4",
+    "file-loader": "^2.0.0",
+    "html-loader": "^0.5.5",
+    "html-webpack-plugin": "^3.2.0",
     "mongoose": "^5.3.15",
     "prop-types": "^15.6.2",
     "react": "^16.6.3",
@@ -48,17 +53,13 @@
     "react-reveal": "^1.2.2",
     "react-router-dom": "^4.3.1",
     "react-text-transition": "^0.1.6",
-    "validator": "^10.9.0",
-    "webfontloader": "^1.6.28",
-    "dotenv": "^6.2.0",
-    "webpack": "^4.27.1",
-    "webpack-dev-middleware": "^3.3.0",
-    "webpack-hot-middleware": "^2.24.3",
-    "html-webpack-plugin": "^3.2.0",
-    "file-loader": "^2.0.0",
-    "html-loader": "^0.5.5",
     "style-loader": "^0.23.1",
     "styled-components": "^4.1.2",
-    "css-loader": "^1.0.1"
+    "uglifyjs-webpack-plugin": "^2.0.1",
+    "validator": "^10.9.0",
+    "webfontloader": "^1.6.28",
+    "webpack": "^4.27.1",
+    "webpack-dev-middleware": "^3.3.0",
+    "webpack-hot-middleware": "^2.24.3"
   }
 }
