--- a/package.json
+++ b/package.json
@@ -40,9 +40,11 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "compression-webpack-plugin": "^2.0.0",
     "css-loader": "^1.0.1",
     "dotenv": "^6.2.0",
     "express": "^4.16.4",
+    "express-static-gzip": "^1.1.3",
     "file-loader": "^2.0.0",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
