--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,12 @@
 {
-  "presets": ["@babel/preset-env", "@babel/preset-react"],
+  "presets": [["@babel/preset-env",{
+        "targets": {
+          "browsers": "last 2 versions"
+        }
+      }],
+    "@babel/preset-react"],
   "plugins": [
+    "@babel/plugin-transform-runtime",
     "@babel/plugin-proposal-class-properties",
     "styled-components"
   ]
