--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "description": "Personal Development Portfolio 2018",
   "main": "index.js",
   "scripts": {
-    "start": "webpack --progress --profile --colors && nodemon ./src/index.js",
-    "build": "webpack-dev-server --open --mode production",
-    "prod": "node src/index.js",
+    "start": "webpack-dev-server --config=config/webpack.dev.js",
+    "build": "BABEL_ENV=production webpack --config=config/webpack.prod.js --env.NODE_ENV=production ",
+    "build:dev": "webpack --config=config/webpack.dev.js",
+    "dev": "nodemon --inspect --watch src/server --watch config src/server/main.js",
+    "prod": "NODE_ENV=production node src/server/main.js",
     "clean": "rm -rf dist/*",
     "lint": "eslint ./",
     "lint-fix": "eslint --fix ./"
@@ -17,15 +19,26 @@
   },
   "author": "georgefinn <george.finn@me.com>",
   "license": "ISC",
-  "devDependencies": {
+  "dependencies": {
+    "@babel/cli": "^7.2.0",
     "@babel/core": "^7.2.0",
+    "@babel/plugin-proposal-async-generator-functions": "^7.2.0",
     "@babel/plugin-proposal-class-properties": "^7.2.1",
+    "@babel/plugin-transform-runtime": "^7.2.0",
+    "@babel/polyfill": "^7.0.0",
     "@babel/preset-env": "^7.2.0",
     "@babel/preset-react": "^7.0.0",
-    "babel-loader": "^8.0.2",
+    "@babel/register": "^7.0.0",
+    "@babel/runtime": "^7.2.0",
+    "axios": "^0.18.0",
+    "babel-loader": "^8.0.4",
     "babel-plugin-styled-components": "^1.9.2",
     "body-parser": "^1.18.3",
-    "eslint": "^5.9.0",
+    "brotli-webpack-plugin": "^1.0.0",
+    "compression-webpack-plugin": "^2.0.0",
+    "css-loader": "^2.0.0",
+    "dotenv": "^6.2.0",
+    "eslint": "^5.10.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-config-standard": "^12.0.0",
     "eslint-config-standard-react": "^7.0.2",
@@ -35,20 +48,15 @@
     "eslint-plugin-promise": "^4.0.1",
     "eslint-plugin-react": "^7.11.1",
     "eslint-plugin-standard": "^4.0.0",
-    "nodemon": "^1.18.7",
-    "webpack-cli": "^3.1.1"
-  },
-  "dependencies": {
-    "axios": "^0.18.0",
-    "compression-webpack-plugin": "^2.0.0",
-    "css-loader": "^1.0.1",
-    "dotenv": "^6.2.0",
     "express": "^4.16.4",
     "express-static-gzip": "^1.1.3",
+    "extract-css-chunks-webpack-plugin": "^3.2.1",
     "file-loader": "^2.0.0",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
+    "mini-css-extract-plugin": "^0.5.0",
     "mongoose": "^5.3.15",
+    "optimize-css-assets-webpack-plugin": "^5.0.1",
     "prop-types": "^15.6.2",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
@@ -61,7 +69,10 @@
     "validator": "^10.9.0",
     "webfontloader": "^1.6.28",
     "webpack": "^4.27.1",
+    "webpack-bundle-analyzer": "^3.0.3",
+    "webpack-cli": "^3.1.1",
     "webpack-dev-middleware": "^3.3.0",
+    "webpack-dev-server": "^3.1.10",
     "webpack-hot-middleware": "^2.24.3"
   }
 }
