--- a/package.json
+++ b/package.json
@@ -20,6 +20,27 @@
   "author": "georgefinn <george.finn@me.com>",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.18.0",
+    "body-parser": "^1.18.3",
+    "dotenv": "^6.2.0",
+    "express": "^4.16.4",
+    "express-static-gzip": "^1.1.3",
+    "mongoose": "^5.3.15",
+    "prop-types": "^15.6.2",
+    "react": "^16.6.3",
+    "react-dom": "^16.6.3",
+    "react-reveal": "^1.2.2",
+    "react-router-dom": "^4.3.1",
+    "react-text-transition": "^0.1.6",
+    "styled-components": "^4.1.2",
+    "validator": "^10.9.0",
+    "webfontloader": "^1.6.28",
+    "webpack-dev-middleware": "^3.3.0",
+    "webpack-hot-middleware": "^2.24.3"
+  },
+  "devDependencies": {
+    "babel-plugin-styled-components": "^1.9.2",
+    "babel-loader": "^8.0.4",
     "@babel/cli": "^7.2.0",
     "@babel/core": "^7.2.0",
     "@babel/plugin-proposal-async-generator-functions": "^7.2.0",
@@ -30,14 +51,6 @@
     "@babel/preset-react": "^7.0.0",
     "@babel/register": "^7.0.0",
     "@babel/runtime": "^7.2.0",
-    "axios": "^0.18.0",
-    "babel-loader": "^8.0.4",
-    "babel-plugin-styled-components": "^1.9.2",
-    "body-parser": "^1.18.3",
-    "brotli-webpack-plugin": "^1.0.0",
-    "compression-webpack-plugin": "^2.0.0",
-    "css-loader": "^2.0.0",
-    "dotenv": "^6.2.0",
     "eslint": "^5.10.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-config-standard": "^12.0.0",
@@ -48,31 +61,20 @@
     "eslint-plugin-promise": "^4.0.1",
     "eslint-plugin-react": "^7.11.1",
     "eslint-plugin-standard": "^4.0.0",
-    "express": "^4.16.4",
-    "express-static-gzip": "^1.1.3",
     "extract-css-chunks-webpack-plugin": "^3.2.1",
     "file-loader": "^2.0.0",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.5.0",
-    "mongoose": "^5.3.15",
+    "brotli-webpack-plugin": "^1.0.0",
+    "compression-webpack-plugin": "^2.0.0",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
-    "prop-types": "^15.6.2",
-    "react": "^16.6.3",
-    "react-dom": "^16.6.3",
-    "react-reveal": "^1.2.2",
-    "react-router-dom": "^4.3.1",
-    "react-text-transition": "^0.1.6",
-    "style-loader": "^0.23.1",
-    "styled-components": "^4.1.2",
-    "uglifyjs-webpack-plugin": "^2.0.1",
-    "validator": "^10.9.0",
-    "webfontloader": "^1.6.28",
     "webpack": "^4.27.1",
     "webpack-bundle-analyzer": "^3.0.3",
     "webpack-cli": "^3.1.1",
-    "webpack-dev-middleware": "^3.3.0",
     "webpack-dev-server": "^3.1.10",
-    "webpack-hot-middleware": "^2.24.3"
+    "uglifyjs-webpack-plugin": "^2.0.1",
+    "style-loader": "^0.23.1",
+    "css-loader": "^2.0.0"
   }
 }
