--- a/package.json
+++ b/package.json
@@ -20,23 +20,24 @@
   "author": "georgefinn <george.finn@me.com>",
   "license": "ISC",
   "dependencies": {
-    "babel-plugin-styled-components": "^1.9.2",
-    "babel-loader": "^8.0.4",
     "@babel/cli": "^7.2.0",
     "@babel/core": "^7.2.0",
     "@babel/plugin-proposal-async-generator-functions": "^7.2.0",
     "@babel/plugin-proposal-class-properties": "^7.2.1",
     "@babel/plugin-transform-runtime": "^7.2.0",
+    "@babel/polyfill": "^7.0.0",
     "@babel/preset-env": "^7.2.0",
     "@babel/preset-react": "^7.0.0",
-    "@babel/runtime": "^7.2.0",
     "@babel/register": "^7.0.0",
-    "@babel/polyfill": "^7.0.0",
+    "@babel/runtime": "^7.2.0",
     "axios": "^0.18.0",
+    "babel-loader": "^8.0.4",
+    "babel-plugin-styled-components": "^1.9.2",
     "body-parser": "^1.18.3",
     "dotenv": "^6.2.0",
     "express": "^4.16.4",
     "express-static-gzip": "^1.1.3",
+    "moment": "^2.23.0",
     "mongoose": "^5.3.15",
     "prop-types": "^15.6.2",
     "react": "^16.6.3",
