--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@babel/preset-react": "^7.0.0",
     "@babel/register": "^7.0.0",
     "@babel/runtime": "^7.2.0",
+    "animejs": "^3.0.1",
     "axios": "^0.18.0",
     "babel-loader": "^8.0.4",
     "babel-plugin-styled-components": "^1.9.2",
@@ -39,9 +40,12 @@
     "express-static-gzip": "^1.1.3",
     "moment": "^2.23.0",
     "mongoose": "^5.3.15",
+    "npm-check-updates": "^2.15.0",
     "prop-types": "^15.6.2",
     "react": "^16.6.3",
+    "react-anime": "^2.2.0",
     "react-dom": "^16.6.3",
+    "react-pose": "^4.0.8",
     "react-reveal": "^1.2.2",
     "react-router-dom": "^4.3.1",
     "react-text-transition": "^0.1.6",
@@ -53,6 +57,9 @@
     "webpack-hot-middleware": "^2.24.3"
   },
   "devDependencies": {
+    "brotli-webpack-plugin": "^1.0.0",
+    "compression-webpack-plugin": "^2.0.0",
+    "css-loader": "^2.0.0",
     "eslint": "^5.10.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-config-standard": "^12.0.0",
@@ -64,19 +71,16 @@
     "eslint-plugin-react": "^7.11.1",
     "eslint-plugin-standard": "^4.0.0",
     "extract-css-chunks-webpack-plugin": "^3.2.1",
-    "file-loader": "^2.0.0",
+    "file-loader": "^3.0.1",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.5.0",
-    "brotli-webpack-plugin": "^1.0.0",
-    "compression-webpack-plugin": "^2.0.0",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
+    "style-loader": "^0.23.1",
+    "uglifyjs-webpack-plugin": "^2.0.1",
     "webpack": "^4.27.1",
     "webpack-bundle-analyzer": "^3.0.3",
     "webpack-cli": "^3.1.1",
-    "webpack-dev-server": "^3.1.10",
-    "uglifyjs-webpack-plugin": "^2.0.1",
-    "style-loader": "^0.23.1",
-    "css-loader": "^2.0.0"
+    "webpack-dev-server": "^3.1.14"
   }
 }
