--- a/package.json
+++ b/package.json
@@ -35,12 +35,12 @@
     "babel-loader": "^8.0.4",
     "babel-plugin-styled-components": "^1.9.2",
     "body-parser": "^1.18.3",
-    "dotenv": "^6.2.0",
+    "dotenv": "^7.0.0",
     "express": "^4.16.4",
     "express-static-gzip": "^1.1.3",
     "moment": "^2.23.0",
     "mongoose": "^5.3.15",
-    "npm-check-updates": "^2.15.0",
+    "npm-check-updates": "^3.0.12",
     "prop-types": "^15.6.2",
     "react": "^16.6.3",
     "react-anime": "^2.2.0",
@@ -48,7 +48,9 @@
     "react-pose": "^4.0.8",
     "react-reveal": "^1.2.2",
     "react-router-dom": "^4.3.1",
+    "react-spring": "^8.0.15",
     "react-text-transition": "^0.1.6",
+    "react-transition-group": "^2.6.1",
     "styled-components": "^4.1.2",
     "suncalc": "^1.8.0",
     "validator": "^10.9.0",
@@ -70,7 +72,7 @@
     "eslint-plugin-promise": "^4.0.1",
     "eslint-plugin-react": "^7.11.1",
     "eslint-plugin-standard": "^4.0.0",
-    "extract-css-chunks-webpack-plugin": "^3.2.1",
+    "extract-css-chunks-webpack-plugin": "^4.0.1",
     "file-loader": "^3.0.1",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
